# tikkun-olam-data-club

./: .gitignore  main.py  mkdocs.yaml  pyproject.toml  test.csv
.zed/: settings.json
docs/: exercises.md  getting_started.md  index.md  installation.md
docs/sessions/: 01.md
example_files/: exp_types.csv  main_pkmn_dataset.csv  test_data.csv  trainers.csv
src/: auth.py  run.py
src/Louis/: exercises_one.py
src/cli/: run.py
src/deven/: functions.py
src/exercises/set_1/: exercises_one.py
src/exercises/set_2/: exercise_set_2.py  test.csv
src/exercises/set_3/: exercise_set_3.py  session_3.py
src/exercises/set_4/: functions.py
src/interfaces/: __init__.py
src/interfaces/google/: auth.py
src/primer/: exercises_one.py  session_one.py
src/utils/: __init__.py  core.py
